State component centered contents class, button branding

--- a/scss/components/_state.scss
+++ b/scss/components/_state.scss
@@ -18,3 +18,7 @@
         display: none;
         visibility: visible;
     }
+
+    .state__centered-contents {
+        text-align: center;
+    }
