--- a/scss/components/_wrapper.scss
+++ b/scss/components/_wrapper.scss
@@ -23,3 +23,7 @@
         padding-top: 3%;
         padding-bottom: 3%;
     }
+
+    .wrapper--centered-contents {
+        text-align: center;
+    }
