Loading section, spinner

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,7 @@
  * OBJECTS
  * Grids..................Grid elements.
  * Buttons................Button elements.
+ * Spinner................Spinner element.
  *
  *
  * COMPONENTS
@@ -72,6 +73,7 @@
  */
 @import 'objects/grids';
 @import 'objects/buttons';
+@import 'objects/spinner';
 
 
 
