--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -13,7 +13,7 @@
 /*------------------------------------*\
     $DEBUG
 \*------------------------------------*/
-$debug-mode: true;
+$debug-mode: false;
 
 
 
