--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,11 +19,14 @@
  * Main...................High-level elements e.g. `html`, `body`, etc.
  * Headings...............H1-H6 Styles.
  * Images.................`<img... />` styles.
+ * Links..................`<a ...>` styles.
  *
  *
  * OBJECTS
  * Grids..................Grid elements.
+ * Icons..................Icon elements.
  * Buttons................Button elements.
+ * Inputs.................Input elements.
  * Spinner................Spinner element.
  *
  *
@@ -63,6 +66,7 @@
 @import 'base/main';
 @import 'base/headings';
 @import 'base/images';
+@import 'base/links';
 
 
 
@@ -72,7 +76,10 @@
  * Objects and abstractions
  */
 @import 'objects/grids';
+@import 'objects/fullscreen';
+@import 'objects/icons';
 @import 'objects/buttons';
+@import 'objects/inputs';
 @import 'objects/spinner';
 
 
