Modal window, error message on wrong code

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@
  *
  *
  * COMPONENTS
+ * Mowin..................Modal window.
  * Wrapper................Wrapping and constraining elements.
  * State..................Game status/frame component.
  *
@@ -90,6 +91,7 @@
 /**
  * Components
  */
+@import 'components/mowin';
 @import 'components/wrapper';
 @import 'components/state';
 
