.list-block class

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,7 @@
  * Icons..................Icon elements.
  * Buttons................Button elements.
  * Inputs.................Input elements.
+ * List Block.............Block list elements.
  * Spinner................Spinner element.
  *
  *
@@ -81,6 +82,7 @@
 @import 'objects/icons';
 @import 'objects/buttons';
 @import 'objects/inputs';
+@import 'objects/list-block';
 @import 'objects/spinner';
 
 
