--- a/scss/components/_state.scss
+++ b/scss/components/_state.scss
@@ -3,6 +3,7 @@
 \*------------------------------------*/
 .state {
     position: absolute;
+    display: none;
     top: 0;
     right: 0;
     bottom: 0;
