--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -4,8 +4,8 @@
 html {
     font: #{($base-font-size/16px)*1em}/#{$line-height-ratio} $base-font-family;
     height: 100%;
-    color: $base-font-color;
-    background-color: $base-background-color;
+    color: $base-text-color--primary;
+    background-color: $base-background-color--primary;
     @if $global-border-box == true {
         box-sizing: border-box; /* apply a natural box layout model to all elements, but allowing components to change */
     }
