--- a/scss/objects/_spinner.scss
+++ b/scss/objects/_spinner.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     width: 30px;
     height: 30px;
-    background-color: $base-ui-color;
+    background-color: $object-spinner-color;
     text-indent: -999999px;
 
     margin: -15px auto 0;
