--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -125,6 +125,8 @@ $object-input-background-color: $base-background-color--primary;
 $object-input-border-color: $base-color--quinary;
 $object-input-text-color: $base-color--senary;
 
+$object-car-name-text-colour: $base-color--senary;
+
 
 
 
