Highlight selected vehicle

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -126,6 +126,7 @@ $object-input-border-color: $base-color--quinary;
 $object-input-text-color: $base-color--senary;
 
 $object-car-name-text-colour: $base-color--senary;
+$object-car-selected-background-color: $base-color--tertiary;
 
 
 
