DC, improved collision detection

--- a/scss/objects/_cars.scss
+++ b/scss/objects/_cars.scss
@@ -27,6 +27,7 @@
         }
 
         .car-specs__item__image {
+            display: block;
             margin-bottom: $half-spacing-unit;
         }
 
