--- a/scss/objects/_cars.scss
+++ b/scss/objects/_cars.scss
@@ -28,6 +28,7 @@
 
         .car-specs__item__image {
             display: block;
+            margin: 0 auto;
             margin-bottom: $half-spacing-unit;
         }
 
